# macht-api

./: .env.dist  Cargo.toml  Readme.md
.github/workflows/: macht-api-ci.yml
deploy/: README.md  macht-api.service  macht-api.timer
src/: main.rs
src/api/: match_client.rs  mod.rs
src/service/: mod.rs  score_helper.rs
