[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.44"
rusqlite = "0.40"
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
